--- a/README
+++ b/README
@@ -1,1 +1,17 @@
-Dummy README
+This is our IOT product -
+
+
+The best
+
+
+
+
+
+
+
+
+
+Vasil Zlatanov
+Daniel Boulby
+Paul Streli
+Karoly Horvath
